# Ora

./: .gitignore  .gitmodules  .replit  BUILD  Cargo.toml  WORKSPACE  gradle.properties  local.properties.sample  main.py  nohup.out  replit.md  requirements.txt  server.js
app/: build.gradle.kts
app/jni/: bridge.cpp  bridge.h  emoji.cpp  emoji.h  gif.cpp  image.c  image.h  jni.c  log.cpp  log.h  utils.cpp  utils.h  video.cpp  views.c  voice.c
attached_assets/: Pasted--POSTING-CONTENT-CREATION-Text-posts-status-updates-Pho_1775404917536.txt  Pasted-Posting-Content-Photo-posts-single-or-carousel-multiple_1775399567719.txt  Pasted-Posting-Content-Short-form-videos-up-to-10-minutes-Phot_1775404686192.txt  Pasted-Privacy-Features-Hide-blue-double-ticks-read-receipts-H_1775404728804.txt
config/: settings.py
cpp/: BUILD
cpp/ann/: BUILD  ann_server.cc  hnsw_index.h  hnsw_test.cc  product_quantization.h
data/sample/: seed.py
ios/: project.yml
jamii/: __init__.py
jamii/api/: __init__.py  feed.py  search.py  trending.py  users.py
jamii/cache/: __init__.py  feed_cache.py
jamii/embeddings/: __init__.py  sim_clusters.py  topic_embeddings.py
jamii/graph/: __init__.py  interaction_graph.py  page_rank.py  real_graph.py  social_proof.py
jamii/ml/: __init__.py  scorer.py
jamii/models/: __init__.py  community.py  event.py  post.py  user.py
jamii/monitoring/: __init__.py  metrics.py
jamii/pipeline/: __init__.py  diversity.py  feed.py  filter.py  heavy_ranker.py  hydrator.py  light_ranker.py  ranker.py  sourcer.py
jamii/safety/: __init__.py  content_safety.py  trust_safety.py
jamii/signals/: __init__.py  tracker.py
java/: BUILD
java/earlybird/: EarlybirdIndex.java
java/graphjet/: InteractionGraph.java  InteractionGraphTest.java
java/timeline/: TimelineService.java
java/topic_social_proof/: TopicSocialProof.java  TopicSocialProofTest.java
java/user_index/: UserIndexService.java
python/phoenix/: BUILD  __init__.py  model.py  online_learning.py  train.py
rust/: BUILD
rust/candidate_pipeline/: Cargo.toml
rust/candidate_pipeline/src/: filter.rs  hydrator.rs  lib.rs  pipeline.rs  scorer.rs  selector.rs  source.rs  types.rs
rust/candidate_pipeline/tests/: integration_test.rs
rust/phoenix/: Cargo.toml
rust/phoenix/src/: main.rs
rust/representation_scorer/: Cargo.toml
rust/representation_scorer/src/: main.rs
rust/thunder/: Cargo.toml
rust/thunder/src/: main.rs
scala/: BUILD
scripts/: ab_test.py  benchmark.py  build-jamii.sh  build-ora-ios.sh  build-ora.sh  eval.py  load_test.py  simulate.py
tests/: test_api.py  test_filter.py  test_pipeline.py  test_ranker.py  test_sourcer.py
thrift/: BUILD  models.thrift  notification.thrift  scoring.thrift  services.thrift
web/: index.html  package.json  pnpm-lock.yaml
(+1080 files in other folders)
