[package]
name        = "candidate_pipeline"
version     = "0.1.0"
edition     = "2021"
description = "Jamii feed candidate pipeline framework — reusable traits for source, filter, hydrator, scorer, selector"
authors     = ["BlusceLabs <eng@blusce.com>"]
license     = "Apache-2.0"

[lib]
name = "candidate_pipeline"
path = "src/lib.rs"

[dependencies]
async-trait   = "0.1"
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "1"
tracing       = "0.1"
chrono        = { version = "0.4", features = ["serde"] }
uuid          = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
