[package]
name        = "phoenix"
version     = "0.1.0"
edition     = "2021"
description = "Phoenix — ML-based out-of-network candidate retrieval for Jamii"
authors     = ["BlusceLabs <eng@blusce.com>"]
license     = "Apache-2.0"

[[bin]]
name = "phoenix"
path = "src/main.rs"

[dependencies]
candidate_pipeline = { path = "../candidate_pipeline" }
axum               = "0.7"
tokio              = { version = "1", features = ["full"] }
tower              = "0.4"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = "0.3"
