[package]
name        = "representation_scorer"
version     = "0.1.0"
edition     = "2021"
description = "RepresentationScorer — embedding-based re-ranking for Jamii"
authors     = ["BlusceLabs <eng@blusce.com>"]
license     = "Apache-2.0"

[[bin]]
name = "representation_scorer"
path = "src/main.rs"

[dependencies]
axum               = "0.7"
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = "0.3"
