[package]
name        = "thunder"
version     = "0.1.0"
edition     = "2021"
description = "Thunder — in-network post retrieval service for Jamii feed"
authors     = ["BlusceLabs <eng@blusce.com>"]
license     = "Apache-2.0"

[[bin]]
name = "thunder"
path = "src/main.rs"

[dependencies]
candidate_pipeline = { path = "../candidate_pipeline" }
tokio              = { version = "1", features = ["full"] }
async-trait        = "0.1"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
axum               = "0.7"
tower              = "0.4"
tracing            = "0.1"
tracing-subscriber = "0.3"
thiserror          = "1"
chrono             = { version = "0.4", features = ["serde"] }
